--- a/package.json
+++ b/package.json
@@ -6,24 +6,33 @@
   "type": "module",
   "scripts": {
     "dev": "tsx --watch src/main.ts",
+    "build:css": "postcss src/main.css --dir public",
     "test": "xss-scan"
   },
   "dependencies": {
-    "@fastify/view": "9.0.0",
+    "@fastify/static": "^7.0.3",
     "@kitajs/fastify-html-plugin": "4.1.0",
-    "@kitajs/html": "4.1.0",
+    "@kitajs/html": "^4.1.0",
     "@kitajs/ts-html-plugin": "4.0.1",
+    "@tailwindcss/typography": "^0.5.13",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
-    "handlebars": "4.7.8",
-    "jsx-runtime": "link:@kitajs/html/jsx-runtime",
     "mongodb": "6.5.0",
+    "pino-pretty": "^11.0.0",
     "zod": "3.23.4"
   },
   "devDependencies": {
+    "@tsconfig/strictest": "^2.0.5",
     "@types/node": "20.12.7",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
     "eslint": "9.1.1",
+    "fastify-plugin": "^4.5.1",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "postcss-lighten-darken": "^0.9.0",
     "prettier": "3.2.5",
+    "tailwindcss": "^3.4.3",
     "tsx": "4.7.3",
     "typescript": "5.4.5"
   }
