--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "tsx --watch src/main.ts",
     "build:css": "postcss src/main.css --dir public",
-    "test": "xss-scan"
+    "test": "xss-scan",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@fastify/static": "^7.0.3",
@@ -18,15 +20,22 @@
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
     "mongodb": "6.5.0",
+    "pino": "9.0.0",
     "pino-pretty": "^11.0.0",
+    "postcss-import": "16.1.0",
     "zod": "3.23.4"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "20.12.7",
+    "@types/postcss-import": "14.0.3",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.1",
-    "eslint": "9.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "8.10.0",
+    "eslint-plugin-prettier": "5.1.3",
     "fastify-plugin": "^4.5.1",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
@@ -35,5 +44,10 @@
     "tailwindcss": "^3.4.3",
     "tsx": "4.7.3",
     "typescript": "5.4.5"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@kitajs/html@4.1.0": "patches/@kitajs__html@4.1.0.patch"
+    }
   }
 }
