--- a/package.json
+++ b/package.json
@@ -12,22 +12,29 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
     "@fastify/static": "^7.0.3",
     "@kitajs/fastify-html-plugin": "4.1.0",
     "@kitajs/html": "^4.1.0",
     "@kitajs/ts-html-plugin": "4.0.1",
     "@tailwindcss/typography": "^0.5.13",
+    "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
+    "jsonwebtoken": "9.0.2",
     "mongodb": "6.5.0",
+    "openid": "2.0.12",
     "pino": "9.0.0",
     "pino-pretty": "^11.0.0",
     "postcss-import": "16.1.0",
+    "steamapi": "3.0.8",
     "zod": "3.23.4"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
+    "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.12.7",
+    "@types/openid": "2.0.5",
     "@types/postcss-import": "14.0.3",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
