--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/cookie": "9.3.1",
     "@fastify/static": "^7.0.3",
+    "@fastify/websocket": "10.0.1",
     "@kitajs/fastify-html-plugin": "4.1.0",
     "@kitajs/html": "^4.1.0",
     "@kitajs/ts-html-plugin": "4.0.1",
@@ -36,6 +37,7 @@
     "@types/node": "20.12.7",
     "@types/openid": "2.0.5",
     "@types/postcss-import": "14.0.3",
+    "@types/ws": "8.5.10",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.19",
