--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@kitajs/html": "^4.1.0",
     "@kitajs/ts-html-plugin": "4.0.1",
     "@tailwindcss/typography": "^0.5.13",
+    "async-mutex": "0.5.0",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
