--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx --watch src/main.ts",
     "test": "xss-scan",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "build": "tsc"
   },
   "dependencies": {
     "@fastify/cookie": "9.3.1",
