--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,13 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "verbatimModuleSyntax": false,
+    "esModuleInterop": true,
+    "verbatimModuleSyntax": true,
     "allowSyntheticDefaultImports": true,
     "preserveSymlinks": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
+    "rootDir": ".",
     "outDir": "./build",
     "importHelpers": true,
     "jsx": "react-jsx",
@@ -18,5 +20,5 @@
     "plugins": [{ "name": "@kitajs/ts-html-plugin" }],
     "types": ["@kitajs/html/htmx.d.ts"]
   },
-  "include": ["src"]
+  "exclude": ["playwright.config.ts"]
 }
