--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check": "xss-scan",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
+    "test": "vitest --dir src",
     "test:e2e": "playwright test",
     "build": "tsc -p tsconfig.build.json"
   },
@@ -59,7 +60,8 @@
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "tsx": "4.11.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "^1.6.0"
   },
   "pnpm": {
     "patchedDependencies": {
