--- a/package.json
+++ b/package.json
@@ -38,21 +38,19 @@
     "zod": "3.23.4"
   },
   "devDependencies": {
+    "@eslint/js": "9.4.0",
     "@playwright/test": "^1.44.1",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/eslint__js": "8.42.3",
     "@types/jsonwebtoken": "9.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "20.12.7",
     "@types/openid": "2.0.5",
     "@types/postcss-import": "14.0.3",
     "@types/ws": "8.5.10",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.1",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint": "9.4.0",
     "fastify-plugin": "^4.5.1",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
@@ -61,6 +59,7 @@
     "tailwindcss": "^3.4.3",
     "tsx": "4.11.0",
     "typescript": "5.4.5",
+    "typescript-eslint": "7.12.0",
     "vitest": "^1.6.0"
   },
   "pnpm": {
