--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,20 @@ services:
     volumes:
       - mongo:/data/db
 
+  gameserver:
+    image: ghcr.io/tf2pickup-org/tf2-gameserver:latest
+    environment:
+      - 'SERVER_HOSTNAME=test game server 1'
+      - 'PORT=27015'
+      - 'CLIENT_PORT=27016'
+      - 'STEAM_PORT=27017'
+      - 'STV_PORT=27020'
+      - 'RCON_PASSWORD=123456'
+      - 'TF2PICKUPORG_API_ADDRESS=127.0.0.1:3000'
+      - 'TF2PICKUPORG_SECRET=xxxxxx'
+    network_mode: host
+    stdin_open: true
+    tty: true
+
 volumes:
   mongo:
