--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss-import": "16.1.0",
     "rcon-client": "4.2.4",
     "steamapi": "3.0.8",
+    "steamid": "2.0.0",
     "ws": "^8.17.0",
     "zod": "3.23.4"
   },
@@ -51,6 +52,7 @@
     "@types/node": "20.12.7",
     "@types/openid": "2.0.5",
     "@types/postcss-import": "14.0.3",
+    "@types/steamid": "2.0.3",
     "@types/ws": "8.5.10",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.1",
