--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tsconfig/strictest": "^2.0.5",
     "@types/eslint__js": "8.42.3",
     "@types/jsonwebtoken": "9.0.6",
+    "@types/lodash": "^4.17.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "20.12.7",
     "@types/openid": "2.0.5",
