--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "cssnano": "^7.0.1",
     "eslint": "9.4.0",
     "fastify-plugin": "^4.5.1",
+    "globals": "15.6.0",
     "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "postcss-lighten-darken": "^0.9.0",
