--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@kitajs/ts-html-plugin": "4.0.1",
     "@tailwindcss/typography": "^0.5.13",
     "async-mutex": "0.5.0",
+    "croner": "8.0.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
