test(e2e): enable login test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,6 +66,8 @@ jobs:
           LOG_RELAY_ADDRESS: '127.0.0.1'
           LOG_RELAY_PORT: '9871'
           GAME_SERVER_SECRET: 'xxxxxx'
+          STEAM_USERNAME: ${{ secrets.TEST_USER_USERNAME }}
+          STEAM_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
         run: pnpm test:e2e
 
       - uses: actions/upload-artifact@v4
