--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write .",
     "test": "vitest --dir src",
     "test:e2e": "playwright test",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.build.json && tsc-alias"
   },
   "dependencies": {
     "@fastify/cookie": "9.3.1",
@@ -24,10 +24,12 @@
     "@kitajs/ts-html-plugin": "4.0.1",
     "@tailwindcss/typography": "^0.5.13",
     "async-mutex": "0.5.0",
+    "autoprefixer": "10.4.20",
     "croner": "8.0.2",
     "date-fns": "3.6.0",
     "dotenv": "16.4.5",
     "fastify": "4.26.2",
+    "fastify-plugin": "4.5.1",
     "fastify-type-provider-zod": "1.2.0",
     "generate-password": "1.7.1",
     "jsonwebtoken": "9.0.2",
@@ -38,10 +40,13 @@
     "openid": "2.0.12",
     "pino": "9.0.0",
     "pino-pretty": "^11.2.2",
+    "postcss": "8.4.41",
     "postcss-import": "16.1.0",
+    "postcss-lighten-darken": "0.9.0",
     "rcon-client": "4.2.4",
     "steamapi": "3.0.8",
     "steamid": "2.0.0",
+    "tailwindcss": "3.4.7",
     "ws": "^8.18.0",
     "zod": "3.23.4"
   },
@@ -58,16 +63,12 @@
     "@types/postcss-import": "14.0.3",
     "@types/steamid": "2.0.3",
     "@types/ws": "8.5.10",
-    "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.4",
     "eslint": "9.4.0",
-    "fastify-plugin": "^4.5.1",
     "globals": "15.6.0",
-    "postcss": "^8.4.40",
     "postcss-cli": "^11.0.0",
-    "postcss-lighten-darken": "^0.9.0",
     "prettier": "3.2.5",
-    "tailwindcss": "^3.4.7",
+    "tsc-alias": "1.8.10",
     "tsx": "4.11.0",
     "typescript": "5.4.5",
     "typescript-eslint": "7.12.0",
