--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@fastify/cookie": "9.3.1",
+    "@fastify/flash": "^5.2.0",
     "@fastify/formbody": "7.4.0",
+    "@fastify/request-context": "^5.1.0",
+    "@fastify/secure-session": "^7.5.1",
     "@fastify/sensible": "^5.6.0",
     "@fastify/static": "^7.0.4",
     "@fastify/websocket": "10.0.1",
