--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "globals": "15.9.0",
     "postcss-cli": "11.0.0",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tsc-alias": "1.8.10",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
