--- a/package.json
+++ b/package.json
@@ -65,9 +65,13 @@
     "@types/postcss-import": "14.0.3",
     "@types/steamid": "2.0.3",
     "@types/ws": "8.5.12",
+    "chart.js": "^4.4.6",
     "cssnano": "7.0.6",
+    "esbuild": "^0.24.0",
     "eslint": "9.13.0",
     "globals": "15.11.0",
+    "htmx.org": "^1.9.12",
+    "hyperscript.org": "^0.9.13",
     "pino-princess": "1.0.0",
     "postcss-cli": "11.0.0",
     "prettier": "3.3.3",
