--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "nanoid": "5.0.8",
     "openid": "2.0.12",
     "pino": "9.5.0",
-    "pino-pretty": "11.3.0",
     "postcss": "8.4.47",
     "postcss-import": "16.1.0",
     "postcss-lighten-darken": "0.9.0",
@@ -69,6 +68,7 @@
     "cssnano": "7.0.6",
     "eslint": "9.13.0",
     "globals": "15.11.0",
+    "pino-princess": "^1.0.0",
     "postcss-cli": "11.0.0",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
