--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,12 +33,12 @@ jobs:
   e2e-tests:
     name: end to end
     env:
-      shardTotal: 4
+      shardTotal: 8
 
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3, 4]
+        shard: [1, 2, 3, 4, 5, 6, 7, 8]
 
     services:
       mongo:
