--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,6 +116,6 @@ jobs:
       - name: Upload HTML report
         uses: actions/upload-artifact@v4
         with:
-          name: html-report--attempt-${{ github.run_attempt }}
+          name: html-report-attempt-${{ github.run_attempt }}
           path: playwright-report
           retention-days: 30
