--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write .",
     "test": "vitest --dir src",
     "test:e2e": "playwright test",
-    "build": "tsc -p tsconfig.build.json && tsc-alias"
+    "prebuild": "rimraf dist",
+    "build": "tsc -p tsconfig.build.json && tsc-alias",
+    "postbuild": "cpy public dist && cpy src/**/*.md src/**/*.css dist/src"
   },
   "dependencies": {
     "@fastify/cookie": "11.0.1",
@@ -28,13 +30,17 @@
     "@tailwindcss/typography": "0.5.15",
     "async-mutex": "0.5.0",
     "autoprefixer": "10.4.20",
+    "chart.js": "4.4.6",
     "croner": "9.0.0",
     "date-fns": "4.1.0",
     "dotenv": "16.4.5",
+    "esbuild": "0.24.0",
     "fastify": "5.1.0",
     "fastify-plugin": "5.0.1",
     "fastify-type-provider-zod": "4.0.2",
     "generate-password": "1.7.1",
+    "htmx.org": "1.9.12",
+    "hyperscript.org": "0.9.13",
     "jsonwebtoken": "9.0.2",
     "lodash-es": "4.17.21",
     "marked": "14.1.4",
@@ -65,17 +71,15 @@
     "@types/postcss-import": "14.0.3",
     "@types/steamid": "2.0.3",
     "@types/ws": "8.5.13",
-    "chart.js": "4.4.6",
+    "cpy-cli": "^5.0.0",
     "cssnano": "7.0.6",
-    "esbuild": "0.24.0",
     "eslint": "9.14.0",
     "globals": "15.12.0",
-    "htmx.org": "1.9.12",
-    "hyperscript.org": "0.9.13",
     "pino-princess": "1.0.0",
     "postcss-cli": "11.0.0",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.8",
+    "rimraf": "^6.0.1",
     "tsc-alias": "1.8.10",
     "tsx": "4.19.2",
     "typescript": "5.6.3",
