fix: get rid of the AUTH_SECRET environment variable

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,12 +70,11 @@ jobs:
           MONGODB_URI: 'mongodb://localhost:27017/tf2pickup'
           STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
           QUEUE_CONFIG: '6v6'
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
           THUMBNAIL_SERVICE_URL: 'https://mapthumbnails.tf2pickup.org'
           LOG_RELAY_ADDRESS: '127.0.0.1'
           LOG_RELAY_PORT: '9871'
           GAME_SERVER_SECRET: 'xxxxxx'
-          KEY_STORE_PASSPHRASE: ${{ secrets.AUTH_SECRET }}
+          KEY_STORE_PASSPHRASE: 'a_password'
           STEAM_USERNAME: ${{ secrets.TEST_USER_USERNAME }}
           STEAM_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
         run: pnpm test:e2e --shard=${{ matrix.shard }}/${{ env.shardTotal }}
