--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@deanc/esbuild-plugin-postcss": "1.0.2",
+    "@fastify/autoload": "6.0.2",
     "@fastify/cookie": "11.0.1",
     "@fastify/flash": "6.0.2",
     "@fastify/formbody": "8.0.1",
