--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "test": "vitest --dir src",
     "test:e2e": "playwright test",
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.build.json && tsc-alias",
+    "build": "tsc -p tsconfig.build.json && tsc-alias && tsx scripts/build-bundles.ts",
     "postbuild": "cpy public dist && cpy src/**/*.md src/**/*.css dist/src"
   },
   "dependencies": {
-    "@deanc/esbuild-plugin-postcss": "1.0.2",
     "@fastify/autoload": "6.0.2",
     "@fastify/cookie": "11.0.1",
     "@fastify/flash": "6.0.2",
@@ -78,6 +77,7 @@
     "cpy-cli": "5.0.0",
     "cssnano": "7.0.6",
     "eslint": "9.15.0",
+    "glob": "^11.0.0",
     "globals": "15.12.0",
     "pino-princess": "1.0.0",
     "postcss-cli": "11.0.0",
