--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@kitajs/ts-html-plugin": "4.1.1",
     "@tailwindcss/typography": "0.5.16",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
+    "@tf2pickup-org/mumble-client": "0.10.0",
     "async-mutex": "0.5.0",
     "autoprefixer": "10.4.20",
     "country-flag-icons": "1.5.14",
@@ -48,6 +49,8 @@
     "mongodb": "6.13.0",
     "nanoid": "5.0.9",
     "openid": "2.0.12",
+    "package-up": "5.0.0",
+    "pem": "1.14.8",
     "pino": "9.6.0",
     "postcss": "8.5.1",
     "postcss-import": "16.1.0",
@@ -68,6 +71,7 @@
     "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.13.1",
     "@types/openid": "2.0.5",
+    "@types/pem": "1.14.4",
     "@types/postcss-import": "14.0.3",
     "@types/steamid": "2.0.3",
     "@types/ws": "8.5.13",
