--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "steamapi": "3.0.12",
     "steamid": "2.1.0",
     "tailwindcss": "3.4.16",
+    "umzug": "3.8.2",
     "ws": "8.18.0",
     "zod": "3.24.1"
   },
