--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@kitajs/html": "4.2.6",
     "@kitajs/ts-html-plugin": "4.1.1",
     "@tailwindcss/typography": "0.5.15",
+    "@tf2pickup-org/serveme-tf-client": "0.1.2",
     "async-mutex": "0.5.0",
     "autoprefixer": "10.4.20",
+    "country-flag-icons": "1.5.13",
     "croner": "9.0.0",
     "cssnano": "7.0.6",
     "date-fns": "4.1.0",
