--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "croner": "9.0.0",
     "cssnano": "7.0.6",
     "date-fns": "4.1.0",
+    "discord.js": "14.17.3",
     "dotenv": "16.4.7",
     "es-toolkit": "1.32.0",
     "esbuild": "0.25.0",
