--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "cssnano": "7.0.6",
     "date-fns": "4.1.0",
     "dotenv": "16.4.7",
+    "es-toolkit": "1.32.0",
     "fastify": "5.2.1",
     "fastify-plugin": "5.0.1",
     "fastify-type-provider-zod": "4.0.2",
     "generate-password": "1.7.1",
     "jsonwebtoken": "9.0.2",
-    "lodash-es": "4.17.21",
     "marked": "15.0.6",
     "mime": "4.0.6",
     "mongodb": "6.13.0",
@@ -66,8 +66,6 @@
     "@tsconfig/strictest": "2.0.5",
     "@types/eslint__js": "8.42.3",
     "@types/jsonwebtoken": "9.0.8",
-    "@types/lodash": "4.17.15",
-    "@types/lodash-es": "4.17.12",
     "@types/node": "22.13.0",
     "@types/openid": "2.0.5",
     "@types/postcss-import": "14.0.3",
