--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "test:e2e": "playwright test",
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json && tsc-alias",
-    "postbuild": "cpy public dist && cpy src/**/*.md src/**/*.css dist/src"
+    "postbuild": "cpy public dist && cpy src/**/*.md src/**/*.css dist/src && find src -wholename \"*/@client/*.ts\" -exec cp --parents '{}' dist ';'"
   },
   "dependencies": {
     "@fastify/autoload": "6.1.0",
     "@fastify/cookie": "11.0.2",
+    "@fastify/etag": "^6.0.3",
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
     "@fastify/request-context": "6.0.2",
@@ -29,24 +30,29 @@
     "@kitajs/html": "4.2.7",
     "@kitajs/ts-html-plugin": "4.1.1",
     "@tailwindcss/typography": "0.5.16",
-    "@tf2pickup-org/serveme-tf-client": "0.1.2",
     "@tf2pickup-org/mumble-client": "0.11.2",
+    "@tf2pickup-org/serveme-tf-client": "0.1.2",
     "async-mutex": "0.5.0",
     "autoprefixer": "10.4.20",
+    "chart.js": "4.4.7",
     "country-flag-icons": "1.5.16",
     "croner": "9.0.0",
     "cssnano": "7.0.6",
     "date-fns": "4.1.0",
     "dotenv": "16.4.7",
     "es-toolkit": "1.32.0",
+    "esbuild": "^0.24.2",
     "fastify": "5.2.1",
     "fastify-plugin": "5.0.1",
     "fastify-type-provider-zod": "4.0.2",
     "generate-password": "1.7.1",
+    "howler": "2.2.4",
+    "htmx.org": "2.0.4",
     "jsonwebtoken": "9.0.2",
     "marked": "15.0.7",
     "mime": "4.0.6",
     "mongodb": "6.13.0",
+    "motion": "^12.4.1",
     "nanoid": "5.0.9",
     "openid": "2.0.12",
     "package-up": "5.0.0",
@@ -68,6 +74,7 @@
     "@playwright/test": "1.50.1",
     "@tsconfig/strictest": "2.0.5",
     "@types/eslint__js": "8.42.3",
+    "@types/howler": "^2.2.12",
     "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.13.1",
     "@types/openid": "2.0.5",
@@ -75,13 +82,10 @@
     "@types/postcss-import": "14.0.3",
     "@types/steamid": "2.0.3",
     "@types/ws": "8.5.13",
-    "chart.js": "4.4.7",
     "cpy-cli": "5.0.0",
     "cssnano": "7.0.6",
     "eslint": "9.20.0",
     "globals": "15.14.0",
-    "howler": "2.2.4",
-    "htmx.org": "1.9.12",
     "pino-princess": "1.0.0",
     "postcss-cli": "11.0.0",
     "prettier": "3.5.0",
