feat: logs.tf integration

--- a/sample.env
+++ b/sample.env
@@ -17,6 +17,10 @@ MONGODB_URI=mongodb://localhost:27017/tf2pickup
 # Get your key at https://steamcommunity.com/dev/apikey
 STEAM_API_KEY=your_steam_api_key
 
+# logs.tf API key
+# Obtain yours here: https://logs.tf/uploader
+LOGS_TF_API_KEY=your_logs_tf_api_key
+
 # Which gamemode to run; possible values: 6v6, 9v9, bball, ultiduo, test
 QUEUE_CONFIG=6v6
 
