build: fix linter

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 public-hoist-pattern[]=playwright*
 public-hoist-pattern[]=bson
+public-hoist-pattern[]=framer-motion*
+public-hoist-pattern[]=@tf2pickup-org/*
