fix: add helmet

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,4 @@ public-hoist-pattern[]=bson
 public-hoist-pattern[]=framer-motion*
 public-hoist-pattern[]=@tf2pickup-org/*
 public-hoist-pattern[]=@discordjs/*
+public-hoist-pattern[]=helmet
