--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/etag": "6.0.3",
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
+    "@fastify/helmet": "13.0.1",
     "@fastify/request-context": "6.0.2",
     "@fastify/secure-session": "8.1.1",
     "@fastify/sensible": "6.0.3",
@@ -51,6 +52,7 @@
     "generate-password": "1.7.1",
     "howler": "2.2.4",
     "htmx.org": "2.0.4",
+    "hyperscript.org": "0.9.14",
     "idiomorph": "0.7.2",
     "jsonwebtoken": "9.0.2",
     "marked": "15.0.7",
