--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -90,6 +90,7 @@ jobs:
       GAME_SERVER_SECRET: 'xxxxxx'
       KEY_STORE_PASSPHRASE: 'a_password'
       MUMBLE_SUPERUSER_PASSWORD: '123456'
+      ENABLE_TEST_AUTH: 'true'
 
     strategy:
       fail-fast: false
@@ -155,6 +156,7 @@ jobs:
             -e LOG_RELAY_PORT \
             -e GAME_SERVER_SECRET \
             -e THUMBNAIL_SERVICE_URL \
+            -e ENABLE_TEST_AUTH \
             -p 3000:3000/tcp \
             -p 9871:9871/udp \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build.outputs.tag }}
