--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "cSpell.words": [
     "configurators",
+    "cooldown",
     "Demoman",
     "Gameserver",
     "htmx",
