--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tf2pickup",
-  "version": "12.0.0-alpha.0",
+  "version": "4.0.0-alpha.0",
   "author": "Michał Garapich <garrappachc@gmail.com>",
   "license": "MIT",
   "type": "module",
@@ -101,5 +101,10 @@
     "typescript": "5.8.2",
     "typescript-eslint": "8.26.1",
     "vitest": "3.0.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
