--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "postcss-cli": "11.0.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
+    "release-it": "^18.1.2",
     "rimraf": "6.0.1",
     "tsc-alias": "1.8.11",
     "tsx": "4.19.3",
