--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@eslint/js": "9.22.0",
     "@playwright/test": "1.51.0",
+    "@release-it/conventional-changelog": "^10.0.0",
     "@tsconfig/strictest": "2.0.5",
     "@types/howler": "2.2.12",
     "@types/jsonwebtoken": "9.0.9",
