--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "cssnano": "7.0.6",
     "eslint": "9.24.0",
     "globals": "16.0.0",
+    "lorem-ipsum": "2.0.8",
     "pino-princess": "1.0.0",
     "postcss-cli": "11.0.1",
     "prettier": "3.5.3",
