docs: add DISCORD_BOT_TOKEN to sample.env

--- a/sample.env
+++ b/sample.env
@@ -51,6 +51,9 @@ THUMBNAIL_SERVICE_URL=https://mapthumbnails.tf2pickup.org
 SERVEME_TF_API_ENDPOINT=serveme.tf
 SERVEME_TF_API_KEY=
 
+# Discord (optional)
+DISCORD_BOT_TOKEN=
+
 # twitch.tv integration (optional)
 # https://dev.twitch.tv/console
 TWITCH_CLIENT_ID=
