--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,5 @@ public-hoist-pattern[]=bson
 public-hoist-pattern[]=framer-motion*
 public-hoist-pattern[]=@tf2pickup-org/*
 public-hoist-pattern[]=@discordjs/*
+public-hoist-pattern[]=discord-api-types
 public-hoist-pattern[]=helmet
