--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "cSpell.words": ["Gameserver", "Logsecret", "rcon", "replacee", "serveme"]
+  "cSpell.words": ["Demoman", "Gameserver", "Logsecret", "rcon", "replacee", "serveme"]
 }
