--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "form-data": "4.0.2",
     "generate-password": "1.7.1",
     "howler": "2.2.4",
+    "htmx-ext-preload": "^2.1.1",
     "htmx-ext-ws": "2.0.3",
     "htmx.org": "2.0.4",
     "hyperscript.org": "0.9.14",
