--- a/sample.env
+++ b/sample.env
@@ -58,3 +58,8 @@ DISCORD_BOT_TOKEN=
 # https://dev.twitch.tv/console
 TWITCH_CLIENT_ID=
 TWITCH_CLIENT_SECRET=
+
+# umami integration (optional)
+# https://umami.is/docs/self-host
+UMAMI_SCRIPT_SRC=
+UMAMI_WEBSITE_ID=
