--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "cSpell.words": ["Demoman", "Gameserver", "htmx", "Logsecret", "rcon", "replacee", "serveme"]
+  "cSpell.words": [
+    "Demoman",
+    "Gameserver",
+    "htmx",
+    "Logsecret",
+    "rcon",
+    "replacee",
+    "serveme",
+    "umami"
+  ]
 }
