feat: add SUPER_USER env variable

--- a/sample.env
+++ b/sample.env
@@ -13,6 +13,9 @@ WEBSITE_NAME=tf2pickup.org
 # MongoDB connect string
 MONGODB_URI=mongodb://localhost:27017/tf2pickup
 
+# SteamID64 of the super-user
+SUPER_USER=
+
 # Steam API key
 # Get your key at https://steamcommunity.com/dev/apikey
 STEAM_API_KEY=your_steam_api_key
