--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
     "@fastify/helmet": "13.0.1",
+    "@fastify/rate-limit": "^10.2.2",
     "@fastify/request-context": "6.1.0",
     "@fastify/secure-session": "8.1.1",
     "@fastify/sensible": "6.0.3",
