fix: set session cookie maxAge

--- a/.npmrc
+++ b/.npmrc
@@ -5,3 +5,4 @@ public-hoist-pattern[]=@tf2pickup-org/*
 public-hoist-pattern[]=@discordjs/*
 public-hoist-pattern[]=discord-api-types
 public-hoist-pattern[]=helmet
+public-hoist-pattern[]=@fastify/*
