--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@fastify/secure-session": "8.2.0",
     "@fastify/sensible": "6.0.3",
     "@fastify/static": "8.3.0",
+    "@fastify/swagger": "9.6.1",
+    "@fastify/swagger-ui": "5.2.3",
     "@fastify/websocket": "11.2.0",
     "@kitajs/fastify-html-plugin": "4.2.1",
     "@kitajs/html": "4.2.11",
