fix: configure logging level

--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,10 @@ TZ=Europe/Warsaw
 
 NODE_ENV=production # or development
 
+# Logging level
+# Possible values: fatal, error, warn, info, debug, trace
+LOG_LEVEL=info
+
 # An URL to where this instance will be accessed
 WEBSITE_URL=http://localhost:3000
 
