feat: add otel support

--- a/.npmrc
+++ b/.npmrc
@@ -6,3 +6,4 @@ public-hoist-pattern[]=@discordjs/*
 public-hoist-pattern[]=discord-api-types
 public-hoist-pattern[]=helmet
 public-hoist-pattern[]=@fastify/*
+public-hoist-pattern[]=@opentelemetry/*
