--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
     "@fastify/helmet": "13.0.2",
+    "@fastify/otel": "^0.13.1",
     "@fastify/rate-limit": "10.3.0",
     "@fastify/request-context": "6.2.1",
     "@fastify/secure-session": "8.2.0",
@@ -31,6 +32,13 @@
     "@kitajs/fastify-html-plugin": "4.2.1",
     "@kitajs/html": "4.2.10",
     "@kitajs/ts-html-plugin": "4.1.3",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/instrumentation": "^0.208.0",
+    "@opentelemetry/instrumentation-pino": "^0.55.0",
+    "@opentelemetry/resources": "^2.2.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
