--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@kitajs/fastify-html-plugin": "4.2.1",
     "@kitajs/html": "4.2.10",
     "@kitajs/ts-html-plugin": "4.1.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.208.0",
     "@opentelemetry/instrumentation": "0.208.0",
     "@opentelemetry/instrumentation-pino": "0.55.0",
     "@opentelemetry/resources": "2.2.0",
     "@opentelemetry/sdk-metrics": "2.2.0",
     "@opentelemetry/sdk-node": "0.208.0",
+    "@opentelemetry/sdk-trace-node": "^2.2.0",
     "@opentelemetry/semantic-conventions": "1.38.0",
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
