--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "es-toolkit": "1.42.0",
     "esbuild": "0.27.0",
     "fastify": "5.6.2",
+    "fastify-disablecache": "5.0.0",
     "fastify-plugin": "5.1.0",
     "fastify-type-provider-zod": "6.1.0",
     "form-data": "4.0.5",
