--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "es-toolkit": "1.42.0",
     "esbuild": "0.27.0",
     "fastify": "5.6.2",
+    "fastify-disablecache": "5.0.0",
     "fastify-plugin": "5.1.0",
     "fastify-type-provider-zod": "6.1.0",
     "form-data": "4.0.5",
@@ -68,7 +69,6 @@
     "htmx-ext-ws": "2.0.4",
     "htmx.org": "2.0.8",
     "hyperscript.org": "0.9.14",
-    "idiomorph": "0.7.4",
     "jsonwebtoken": "9.0.2",
     "marked": "17.0.1",
     "mime": "4.1.0",
