--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
+    "ag-grid-community": "34.3.1",
     "async-mutex": "0.5.0",
     "autoprefixer": "10.4.22",
     "chart.js": "4.5.1",
