--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@opentelemetry/sdk-node": "0.208.0",
     "@opentelemetry/sdk-trace-node": "2.2.0",
     "@opentelemetry/semantic-conventions": "1.38.0",
+    "@tailwindcss/node": "4.1.18",
+    "@tailwindcss/postcss": "4.1.18",
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
@@ -88,7 +90,7 @@
     "rcon-client": "4.2.5",
     "steamapi": "3.1.3",
     "steamid": "2.1.0",
-    "tailwindcss": "3.4.19",
+    "tailwindcss": "4.1.18",
     "type-fest": "5.3.1",
     "umzug": "3.8.2",
     "ws": "8.18.0",
@@ -98,6 +100,7 @@
     "@eslint/js": "9.39.2",
     "@playwright/test": "1.57.0",
     "@release-it/conventional-changelog": "10.0.4",
+    "@tailwindcss/cli": "4.1.18",
     "@tsconfig/strictest": "2.0.8",
     "@types/howler": "2.2.12",
     "@types/jsonwebtoken": "9.0.10",
