--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@opentelemetry/sdk-node": "0.208.0",
     "@opentelemetry/sdk-trace-node": "2.2.0",
     "@opentelemetry/semantic-conventions": "1.38.0",
-    "@tailwindcss/node": "4.1.18",
     "@tailwindcss/postcss": "4.1.18",
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
@@ -86,7 +85,7 @@
     "pino": "10.1.0",
     "postcss": "8.5.6",
     "postcss-import": "16.1.1",
-    "postcss-lighten-darken": "0.9.0",
+    "postcss-nested": "7.0.2",
     "rcon-client": "4.2.5",
     "steamapi": "3.1.3",
     "steamid": "2.1.0",
