--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "@opentelemetry/sdk-node": "0.208.0",
     "@opentelemetry/sdk-trace-node": "2.2.0",
     "@opentelemetry/semantic-conventions": "1.38.0",
+    "@tailwindcss/postcss": "4.1.18",
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
     "async-mutex": "0.5.0",
-    "autoprefixer": "10.4.23",
     "chart.js": "4.5.1",
     "country-flag-icons": "1.6.4",
     "croner": "9.1.0",
@@ -84,11 +84,11 @@
     "pino": "10.1.0",
     "postcss": "8.5.6",
     "postcss-import": "16.1.1",
-    "postcss-lighten-darken": "0.9.0",
+    "postcss-nested": "7.0.2",
     "rcon-client": "4.2.5",
     "steamapi": "3.1.3",
     "steamid": "2.1.0",
-    "tailwindcss": "3.4.19",
+    "tailwindcss": "4.1.18",
     "type-fest": "5.3.1",
     "umzug": "3.8.2",
     "ws": "8.18.0",
