--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
     "@fastify/helmet": "13.0.2",
+    "@fastify/multipart": "^9.3.0",
     "@fastify/otel": "0.16.0",
     "@fastify/rate-limit": "10.3.0",
     "@fastify/request-context": "6.2.1",
@@ -47,6 +48,7 @@
     "@tailwindcss/typography": "0.5.19",
     "@tf2pickup-org/mumble-client": "0.12.3",
     "@tf2pickup-org/serveme-tf-client": "0.1.2",
+    "@types/papaparse": "^5.5.2",
     "async-mutex": "0.5.0",
     "chart.js": "4.5.1",
     "country-flag-icons": "1.6.4",
@@ -80,6 +82,7 @@
     "nanoid": "5.1.6",
     "openid": "2.0.14",
     "package-up": "5.0.0",
+    "papaparse": "^5.5.3",
     "pem": "1.14.8",
     "pino": "10.1.0",
     "postcss": "8.5.6",
