--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fastify/flash": "6.0.3",
     "@fastify/formbody": "8.0.2",
     "@fastify/helmet": "13.0.2",
+    "@fastify/multipart": "9.4.0",
     "@fastify/otel": "0.16.0",
     "@fastify/rate-limit": "10.3.0",
     "@fastify/request-context": "6.2.1",
@@ -52,6 +53,8 @@
     "country-flag-icons": "1.6.13",
     "croner": "10.0.1",
     "cssnano": "7.1.2",
+    "csv-parse": "6.1.0",
+    "csv-stringify": "6.6.0",
     "date-fns": "4.1.0",
     "discord.js": "14.25.1",
     "dotenv": "17.3.1",
