docs: cleanup sample.env

--- a/sample.env
+++ b/sample.env
@@ -18,7 +18,7 @@ WEBSITE_NAME=tf2pickup.org
 MONGODB_URI=mongodb://localhost:27017/tf2pickup
 
 # SteamID64 of the super-user
-SUPER_USER=
+SUPER_USER=76561199195756652
 
 # Steam API key
 # Get your key at https://steamcommunity.com/dev/apikey
@@ -28,7 +28,7 @@ STEAM_API_KEY=your_steam_api_key
 # Obtain yours here: https://logs.tf/uploader
 LOGS_TF_API_KEY=your_logs_tf_api_key
 
-# Which gamemode to run; possible values: 6v6, 9v9, bball, ultiduo, test
+# Which gamemode to run; possible values: 6v6, 9v9
 QUEUE_CONFIG=6v6
 
 # A passphrase that is used to encrypt private keys that sign JWT tokens.
@@ -40,7 +40,7 @@ KEY_STORE_PASSPHRASE=a_secure_password
 # The log relay uses one UDP port to receive logs from the TF2 game servers. These are used
 # to determine when the match starts, ends, when users connect, etc.
 # It should be the same address as API_URL, but without the https schema.
-LOG_RELAY_ADDRESS=localhost:3000
+LOG_RELAY_ADDRESS=localhost
 LOG_RELAY_PORT=9871
 
 # Game server secret is used by the connector plugin to register the static gameservers.
