--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tf2pickup",
-  "version": "4.0.0-beta.33",
+  "version": "4.0.0-rc.0",
   "author": "Michał Garapich <garrappachc@gmail.com>",
   "license": "MIT",
   "type": "module",
